# ntm-profiler-webserver

./: .gitignore  README.md  flask.sh  pyproject.toml
src/ntm_profiler_webserver/: __init__.py  files.py  main.py  worker.py
src/ntm_profiler_webserver/templates/: base.html  macros.html
src/ntm_profiler_webserver/templates/pages/: analysis_id.html  full-result.html  index.html  species-result.html  still-waiting.html  upload.html
